<resources>
    <string name="app_name">PortafolioPro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MiPortafolioPro</string>
    <string name="nav_header_subtitle">Portafolio profesional</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Perfil</string>
    <string name="menu_pictures">Fotos</string>
    <string name="menu_video">Video</string>
    <string name="menu_web">Web</string>
    <string name="menu_button">Botones</string>
</resources>