<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_placeholder"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_pictures"
            android:icon="@drawable/ic_photo"
            android:title="@string/menu_pictures" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_video"
            android:title="@string/menu_video" />
        <item
            android:id="@+id/nav_web"
            android:icon="@drawable/ic_web"
            android:title="@string/menu_web" />
        <item
            android:id="@+id/nav_button"
            android:icon="@drawable/button"
            android:title="@string/menu_button" />
    </group>
</menu>