<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.portafoliopro.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_pictures"
        android:name="com.example.portafoliopro.ui.pictures.PicturesFragment"
        android:label="@string/menu_pictures"
        tools:layout="@layout/fragment_pictures" />

    <fragment
        android:id="@+id/nav_video"
        android:name="com.example.portafoliopro.ui.video.VideoFragment"
        android:label="@string/menu_video"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/nav_web"
        android:name="com.example.portafoliopro.ui.web.WebFragment"
        android:label="@string/menu_web"
        tools:layout="@layout/fragment_web" />

    <fragment
        android:id="@+id/nav_button"
        android:name="com.example.portafoliopro.ui.button.ButtonFragment"
        android:label="@string/menu_button"
        tools:layout="@layout/fragment_button" />
</navigation>